# dephy-ncn-v2

./: Anchor.toml  Cargo.toml  deploy_steps.md  package.json  tsconfig.json
clients/dephy-rewards/js/: package.json
clients/dephy-rewards/js/src/: index.ts  merkle-tree.ts  rewards-tree.ts
codama/: dephy-rewards.js
programs/dephy-ncn/: Cargo.toml
programs/dephy-ncn/src/: constants.rs  error.rs  lib.rs  state.rs
programs/dephy-ncn/src/instructions/: initialize_ncn.rs  initialize_operator.rs  initialize_rewards.rs  initialize_vault.rs  mod.rs  vote.rs  warmup_operator.rs  warmup_vault.rs
programs/dephy-rewards/: Cargo.toml
programs/dephy-rewards/src/: lib.rs
scripts/: actions.ts  cli.ts  common.ts  mock_operator.ts  rewards_cli.ts
tests/: dephy-ncn.test.ts  dephy-rewards-kit.test.ts  dephy-rewards.test.ts  merkle-tree.ts  rewards-tree.ts
tests/fixtures/keys/: vault-admin.json
