[workspace]
members = [
    "deps/*",
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
borsh = "1"
bytemuck = "1.22.0"
num-derive = "^0.4"
num-traits = "^0.2"
serde = "^1.0.219"
serde_with = "^3.12.0"
solana-program = "2"
thiserror = "2"
